# graphrag-agent-zero

./: .env.example  .env.graphrag  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  EXECUTIVE_SUMMARY.md  IDENTITY.md  LICENSE  README.md  ROADMAP.md  USER.md  content_mapping.json  docker-compose.graphrag-dev.yml  docker-compose.neo4j.yml  enrich_graph.py  extract_content.py  package-lock.json  package.json  project.json  pyproject.toml  tsconfig.json  walkthrough.md
agent-zero-fork/: DockerfileLocal  agent.py  initialize.py  models.py  requirements.txt  run_ui.py
benchmark/: BENCHMARK_PLAN.md  SAFE_CYPHER_TEMPLATES.md  benchmark_questions.json
config/: graphrag_settings.py  neo4j_config.json
dev/: .env.example  docker-compose.bench.yml  docker-compose.e2e.yml  docker-compose.graphrag-dev.yml
docs/: COMPATIBILITY.md  CONFIGURATION.md  DEV_NOTES.md  HYBRID_CONTRACT.md  Hybrid_GraphRAG_Documentation.md  IMPLEMENTATION_PLAN.md  MAINTENANCE.md  RELEASE_CHECKLIST.md  SECURITY_MODEL.md  WALKTHROUGH.md  architecture.md  config.md  install.md  troubleshooting.md
installer_files/: _80_graphrag.py  _80_graphrag_delete.py  _80_graphrag_patch.py  _80_graphrag_sync.py  agent.system.graphrag.md  agent.utility.system.graphrag.md
results/: baseline_20260228_001122.json  baseline_20260228_015209.json  benchmark_results.json
scripts/: baseline_benchmark.py  batch_index.py  check.sh  e2e.sh  e2e_harness.py  e2e_hybrid_contract.sh  e2e_memory_receipt.py  hybrid_prompt_probe.mjs  install.sh  run_benchmark.py  trigger_agent.py  verify.sh  verify_memory.py
src/: extension_hook.py  graph_builder.py  hybrid_retrieve.py  neo4j_connector.py  test_memory_sync.py
tests/: __init__.py  test_ci_mock.py  (+8 more)
(+98 files in other folders)
