[project]
name = "graphrag-agent-zero"
version = "0.2.0"
description = "GraphRAG extension for Agent Zero"
authors = [
    { name = "Ai joose Factory", email = "hello@aijoose.com" }
]
dependencies = [
    "python-dotenv>=1.0.1",
    "nest_asyncio>=1.6.0",
    "litellm>=1.0.0",
    "neo4j>=5.17.0",
    "langchain-community>=0.0.1",
]
requires-python = ">=3.10"
license = { text = "MIT" }

[project.optional-dependencies]
neo4j = [
    "neo4j>=5.17.0",
]
metrics = [
    "prometheus-client>=0.17.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"graphrag_agent_zero.prompts" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "agent-zero-fork",
    "dev",
    "scripts",
]
